2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs: Remove unnecessary check.

2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs: Correct >/<= mistake. Fixes
	recent solutions list.

2008-10-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs: Add error handling for
	recent solution not existing. Fixes "Bug 437120 - Recent solutions
	list does not handle DirectoryNotFoundException gracefully".

2008-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed 'Bug 436871 -
	Automatically inserted text cannot be undone in one move'.

2008-10-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Stored last error free document in
	document.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.mdp: Updated.

	* MonoDevelop.Ide.Gui.Content/ISmartIndenter.cs: Sketch out an API for
	smart indent.

	* MonoDevelop.Ide.Gui.Content/SmartIndenter.cs: Removed.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Search/DefaultFind.cs: fixed 'Bug 432845 - Find
	and replace doesn't work'.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Track
	APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/TemplateCompletionDataProvider.cs:
	Unused & GPL => remove.

	* Makefile.am:
	* MonoDevelop.Ide.mdp: Updated.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Content/IUrlHandler.cs: Jump to declaration now is
	able to handle dom objects defined in assemblies.

2008-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.CodeTemplates/TemplateCompletionDataProvider.cs:
	Implement ICompletionData.Sink and remove CompareTo.
