@@ -1,3 +1,9 @@
+2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs: Escape messages shown in
+	dialogs and the status bar. Fixes bug #432287 - Empty warning message
+	when trying to open a badly formatted .csproj file.
+
 2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Ide.Commands/FileCommands.cs: Remove unnecessary check.
